[package]
name = "wordle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wordle"
path = "main.rs"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
itertools = "0.10.3"
rayon = "1.5.1"
rustc-hash = "1.1.0"
rustyline = "9.1.2"
