[package]
name = "wordle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordle"
path = "lib.rs"

[[bin]]
name = "wordle"
path = "main.rs"

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
itertools = "0.10.3"
rayon = "1.5.1"
rustc-hash = "1.1.0"
rustyline = "9.1.2"

[profile.release]
debug = true
# Hurts compilation times a lot.
codegen-units=1
lto="fat"
